feat(diff-analysis): extract touched files from git diff and improve null handling
Added functionality to extract file paths from Git diff headers and include them in the analysis response. The service now parses diff lines matching 'diff --git a/file b/file' pattern and returns a deduplicated list of touched files in the order they appear.

Key changes:
- Added static regex pattern for parsing Git diff headers
- Implemented extractTouchedFilesFromDiff method with robust null/empty handling
- Enhanced mapToAnalyzeDiffResponse to include touched files in response
- Improved null handling by adding isBlank() check alongside existing null/empty checks
- Added comprehensive test coverage for file extraction functionality

The touched files list is returned as an immutable, insertion-ordered collection that preserves the sequence of file modifications as they appear in the diff.